@@ -18,51 +18,59 @@
 
 package com.wolfyscript.utilities.bukkit.commands;
 
-import com.wolfyscript.utilities.NamespacedKey;
 import com.wolfyscript.utilities.bukkit.BukkitNamespacedKey;
-import com.wolfyscript.utilities.bukkit.WolfyUtilsBukkit;
+import com.wolfyscript.utilities.bukkit.WolfyCoreImpl;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import com.wolfyscript.utilities.NamespacedKey;
 import com.wolfyscript.utilities.bukkit.chat.BukkitChat;
 import com.wolfyscript.utilities.bukkit.world.particles.ParticleEffect;
 import com.wolfyscript.utilities.bukkit.world.particles.animators.AnimatorSphere;
 import com.wolfyscript.utilities.bukkit.world.particles.timer.TimerLinear;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 import org.bukkit.Particle;
 import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
-import org.bukkit.command.TabCompleter;
+import org.bukkit.command.PluginIdentifiableCommand;
 import org.bukkit.entity.Player;
+import org.bukkit.plugin.Plugin;
 import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 
-public class SpawnParticleEffectCommand implements CommandExecutor, TabCompleter {
+public final class SpawnParticleEffectCommand extends Command implements PluginIdentifiableCommand {
 
-    private final List<String> COMMANDS = List.of("spawn");
-
-    private final WolfyUtilsBukkit wolfyUtils;
+    private final List<String> COMMANDS = Arrays.asList("spawn", "stop");
+    private final WolfyCoreImpl core;
     private final BukkitChat chat;
 
-    public SpawnParticleEffectCommand(WolfyUtilsBukkit wolfyUtils) {
-        this.wolfyUtils = wolfyUtils;
-        this.chat = wolfyUtils.getChat();
+    public SpawnParticleEffectCommand(WolfyCoreImpl core) {
+        super("particle_effect");
+        this.core = core;
+        this.chat = core.getChat();
+        setUsage("/particle_effect spawn");
+        setDescription("DEBUG! Spawns a test particle effect on the target block.");
+        setPermission("wolfyutilities.command.particle_effect.spawn");
+    }
+
+    @NotNull
+    @Override
+    public Plugin getPlugin() {
+        return core;
     }
 
     @Override
-    public boolean onCommand(CommandSender commandSender, Command command, String s, String[] args) {
-        if (commandSender instanceof Player player) {
+    public boolean execute(@NotNull CommandSender sender, @NotNull String commandLabel, @NotNull String[] args) {
+        if (sender instanceof Player player && testPermission(player)) {
             if (args.length > 0) {
                 if (args[0].equalsIgnoreCase("spawn")) {
-                    if (wolfyUtils.getPermissions().hasPermission(commandSender, "wolfyutilities.command.particle_effect.spawn")) {
-                        var block = player.getTargetBlockExact(10);
-                        if (block != null) {
-                            var particleEffect = new ParticleEffect(Particle.FLAME);
-                            particleEffect.setKey(BukkitNamespacedKey.wolfyutilties("test"));
-                            particleEffect.setTimeSupplier(new TimerLinear(0.1, 40));
-                            particleEffect.setAnimator(new AnimatorSphere(2));
-                            particleEffect.spawn(block);
-                        }
+                    var block = player.getTargetBlockExact(10);
+                    if (block != null) {
+                        var particleEffect = new ParticleEffect(Particle.FLAME);
+                        particleEffect.setKey(BukkitNamespacedKey.wolfyutilties("test"));
+                        particleEffect.setTimeSupplier(new TimerLinear(0.1, 40));
+                        particleEffect.setAnimator(new AnimatorSphere(2));
+                        particleEffect.spawn(block);
                     }
                 }
             }
@@ -70,40 +78,40 @@ public class SpawnParticleEffectCommand implements CommandExecutor, TabCompleter
         return false;
     }
 
+    @NotNull
     @Override
-    public List<String> onTabComplete(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, @NotNull String[] args) {
+    public List<String> tabComplete(@NotNull CommandSender sender, @NotNull String alias, @NotNull String[] args) throws IllegalArgumentException {
         List<String> results = new ArrayList<>();
-        if (wolfyUtils.getPermissions().hasPermission(commandSender, "wolfyutilities.command.particle_effect.complete")) {
-            if (commandSender instanceof Player player) {
-                if (args.length > 1) {
-                    if (args[0].equalsIgnoreCase("spawn")) {
-                        switch (args.length) {
-                            case 2:
-                                List<String> effects = new ArrayList<>();
-                                for (NamespacedKey namespacedKey : wolfyUtils.getRegistries().getParticleEffects().keySet()) {
-                                    effects.add(namespacedKey.toString());
-                                }
-                                StringUtil.copyPartialMatches(args[1], effects, results);
-                                break;
-                            case 3:
-                                results.add("x");
-                                results.add(String.valueOf(player.getLocation().getX()));
-                                break;
-                            case 4:
-                                results.add("y");
-                                results.add(String.valueOf(player.getLocation().getY()));
-                                break;
-                            case 5:
-                                results.add("z");
-                                results.add(String.valueOf(player.getLocation().getZ()));
-                                break;
-                            default:
-                                return results;
+        if (testPermission(sender) && sender instanceof Player player) {
+            if (args.length > 1) {
+                if (args[0].equalsIgnoreCase("spawn")) {
+                    switch (args.length) {
+                        case 2 -> {
+                            List<String> effects = new ArrayList<>();
+                            for (NamespacedKey namespacedKey : core.getRegistries().getParticleEffects().keySet()) {
+                                effects.add(namespacedKey.toString());
+                            }
+                            StringUtil.copyPartialMatches(args[1], effects, results);
+                        }
+                        case 3 -> {
+                            results.add("x");
+                            results.add(String.valueOf(player.getLocation().getX()));
+                        }
+                        case 4 -> {
+                            results.add("y");
+                            results.add(String.valueOf(player.getLocation().getY()));
+                        }
+                        case 5 -> {
+                            results.add("z");
+                            results.add(String.valueOf(player.getLocation().getZ()));
+                        }
+                        default -> {
+                            return results;
                         }
                     }
-                } else {
-                    StringUtil.copyPartialMatches(args[0], COMMANDS, results);
                 }
+            } else {
+                StringUtil.copyPartialMatches(args[0], COMMANDS, results);
             }
         }
         Collections.sort(results);
